@@ -6,64 +6,63 @@ import com.company.ExamBackend.dto.QuestionDTO;
 import com.company.ExamBackend.dto.QuestionResponseDTO;
 import com.company.ExamBackend.model.Option;
 import com.company.ExamBackend.model.Question;
+import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Component
 public class QuestionMapper {
 
-    public static Question toEntity(QuestionDTO dto) {
+    public Question toEntity(QuestionDTO dto) {
         Question question = new Question();
         question.setText(dto.getText());
         question.setMarks(dto.getMarks());
 
-        List<Option> options = new ArrayList<>();
-
-        for (OptionDTO oDto : dto.getOptions()) {
-            Option option = new Option();
-            option.setText(oDto.getText());
-            option.setOptionIndex(oDto.getOptionIndex());
-            option.setCorrect(oDto.getOptionIndex() == dto.getCorrectOptionIndex());
-
-            option.setQuestion(question);
-
-            options.add(option);
+        if (dto.getOptions() != null) {
+            question.setOptions(dto.getOptions().stream()
+                    .map(oDto -> mapToOption(oDto, dto.getCorrectOptionIndex(), question))
+                    .collect(Collectors.toList()));
         }
-
-        question.setOptions(options);
         return question;
     }
 
-    public static QuestionResponseDTO toResponseDto(Question question) {
+    private Option mapToOption(OptionDTO oDto, int correctIndex, Question question) {
+        Option option = new Option();
+        option.setText(oDto.getText());
+        option.setOptionIndex(oDto.getOptionIndex());
+        option.setCorrect(oDto.getOptionIndex() == correctIndex);
+        option.setQuestion(question);
+        return option;
+    }
 
-        int correctIndex = question.getOptions().stream()
+    public QuestionResponseDTO toResponseDto(Question question) {
+        return QuestionResponseDTO.builder()
+                .id(question.getId())
+                .text(question.getText())
+                .marks(question.getMarks())
+                .correctOptionIndex(findCorrectIndex(question))
+                .options(mapOptionResponses(question))
+                .build();
+    }
+
+    private int findCorrectIndex(Question question) {
+        return question.getOptions().stream()
                 .filter(Option::isCorrect)
                 .mapToInt(Option::getOptionIndex)
                 .findFirst()
                 .orElse(-1);
+    }
 
-        List<OptionResponseDTO> optionDtos = question.getOptions().stream()
+    private List<OptionResponseDTO> mapOptionResponses(Question question) {
+        return question.getOptions().stream()
                 .sorted(Comparator.comparingInt(Option::getOptionIndex))
                 .map(opt -> OptionResponseDTO.builder()
                         .optionIndex(opt.getOptionIndex())
                         .text(opt.getText())
                         .build())
-                .collect(Collectors.toList());
-
-        return QuestionResponseDTO.builder()
-                .id(question.getId())
-                .text(question.getText())
-                .marks(question.getMarks())
-                .correctOptionIndex(correctIndex)
-                .options(optionDtos)
-                .build();
-    }
-
-    public static List<QuestionResponseDTO> toResponseDtoList(List<Question> questions) {
-        return questions.stream()
-                .map(QuestionMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
